--- a/rdgenerator/templates/generated.html
+++ b/rdgenerator/templates/generated.html
@@ -124,77 +124,41 @@
     </svg>
 ##12.14
 <div>
-    <h2 class="success-text">Build Generated Successfully</h2>
-    <div class="download-section">
-        {% if platform == 'windows' %}
-            <a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}.exe&uuid={{ uuid }}" class="download-link">
-                Download {{ filename }}-{{ direction }}-{{ short_uuid }}
-            </a>
-            <a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}.msi&uuid={{ uuid }}" class="download-link">
-                Download {{ filename }}-{{ direction }}-{{ short_uuid }}
-            </a>
-        {% elif platform == 'windows-x86' %}
-            <a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}.exe&uuid={{ uuid }}" class="download-link">
-                Download {{ filename }}-{{ direction }}-{{ short_uuid }}
-            </a>
-        {% elif platform == 'linux' %}
-            <a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}-x86_64.deb&uuid={{ uuid }}" class="download-link">
-                Download {{ filename }}-{{ direction }}-{{ short_uuid }}-x86_64
-            </a>
-            <a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}-x86_64.rpm&uuid={{ uuid }}" class="download-link">
-                Download {{ filename }}-{{ direction }}-{{ short_uuid }}-x86_64
-            </a>
-            <a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}-suse-x86_64.rpm&uuid={{ uuid }}" class="download-link">
-                Download {{ filename }}-{{ direction }}-{{ short_uuid }}-suse-x86_64
-            </a>
-            <a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}-x86_64.pkg.tar.zst&uuid={{ uuid }}" class="download-link">
-                Download {{ filename }}-{{ direction }}-{{ short_uuid }}-x86_64
-            </a>
-            <a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}-aarch64.deb&uuid={{ uuid }}" class="download-link">
-                Download {{ filename }}-{{ direction }}-{{ short_uuid }}-aarch64
-            </a>
-            <a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}-aarch64.rpm&uuid={{ uuid }}" class="download-link">
-                Download {{ filename }}-{{ direction }}-{{ short_uuid }}-aarch64
-            </a>
-            <a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}-suse-aarch64.rpm&uuid={{ uuid }}" class="download-link">
-                Download {{ filename }}-{{ direction }}-{{ short_uuid }}-suse-aarch64
-            </a>
-            <a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}-aarch64.pkg.tar.zst&uuid={{ uuid }}" class="download-link">
-                Download {{ filename }}-{{ direction }}-{{ short_uuid }}-aarch64
-            </a>
-            <a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}-x86_64.AppImage&uuid={{ uuid }}" class="download-link">
-                Download {{ filename }}-{{ direction }}-{{ short_uuid }}-x86_64
-            </a>
-            <a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}-aarch64.AppImage&uuid={{ uuid }}" class="download-link">
-                Download {{ filename }}-{{ direction }}-{{ short_uuid }}-aarch64
-            </a>
-            <a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}-x86_64.flatpak&uuid={{ uuid }}" class="download-link">
-                Download {{ filename }}-{{ direction }}-{{ short_uuid }}-x86_64
-            </a>
-            <a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}-aarch64.flatpak&uuid={{ uuid }}" class="download-link">
-                Download {{ filename }}-{{ direction }}-{{ short_uuid }}-aarch64
-            </a>
-        {% elif platform == 'android' %}
-            <a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}-aarch64.apk&uuid={{ uuid }}" class="download-link">
-                Download {{ filename }}-{{ direction }}-{{ short_uuid }}-aarch64
-            </a>
-            <a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}-x86_64.apk&uuid={{ uuid }}" class="download-link">
-                Download {{ filename }}-{{ direction }}-{{ short_uuid }}-x86_64
-            </a>
-            <a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}-armv7.apk&uuid={{ uuid }}" class="download-link">
-                Download {{ filename }}-{{ direction }}-{{ short_uuid }}-armv7
-            </a>
-        {% elif platform == 'macos' %}
-            <a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}-x86_64.dmg&uuid={{ uuid }}" class="download-link">
-                Download {{ filename }}-{{ direction }}-{{ short_uuid }}-x86_64
-            </a>
-            <a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}-aarch64.dmg&uuid={{ uuid }}" class="download-link">
-                Download {{ filename }}-{{ direction }}-{{ short_uuid }}-aarch64
-            </a>
-        {% else %}
-            <p>Error: No file generated</p>
-        {% endif %}
-    </div>
+<h2 class="success-text">Build Generated Successfully</h2>
+<div class="download-section">
+{% if platform == 'windows' %}
+<a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}.exe&uuid={{ uuid }}" class="download-link">
+Download {{ filename }}-{{ direction }}-{{ short_uuid }} (.exe) 
+</a>
+<a href="/download?filename={{ filename }}-{{ direction }}-{{ short_uuid }}.msi&uuid={{ uuid }}" class="download-link">
+Download {{ filename }}-{{ direction }}-{{ short_uuid }} (.msi)
+</a>
+{% elif platform == 'windows-x86' %}
+    <a href='/download?filename={{filename}}.exe&uuid={{uuid}}' class="download-link">Download {{filename}}.exe</a>
+{% elif platform == 'linux' %}
+    <a href='/download?filename={{filename}}-x86_64.deb&uuid={{uuid}}' class="download-link">Download {{filename}}-x86_64.deb</a>
+    <a href='/download?filename={{filename}}-x86_64.rpm&uuid={{uuid}}' class="download-link">Download {{filename}}-x86_64.rpm</a>
+    <a href='/download?filename={{filename}}-suse-x86_64.rpm&uuid={{uuid}}' class="download-link">Download {{filename}}-suse-x86_64.rpm</a>
+    <a href='/download?filename={{filename}}-x86_64.pkg.tar.zst&uuid={{uuid}}' class="download-link">Download {{filename}}-x86_64.pkg.tar.zst</a>
+    <a href='/download?filename={{filename}}-aarch64.deb&uuid={{uuid}}' class="download-link">Download {{filename}}-aarch64.deb</a>
+    <a href='/download?filename={{filename}}-aarch64.rpm&uuid={{uuid}}' class="download-link">Download {{filename}}-aarch64.rpm</a>
+    <a href='/download?filename={{filename}}-suse-aarch64.rpm&uuid={{uuid}}' class="download-link">Download {{filename}}-suse-aarch64.rpm</a>
+    <a href='/download?filename={{filename}}-aarch64.pkg.tar.zst&uuid={{uuid}}' class="download-link">Download {{filename}}-aarch64.pkg.tar.zst</a>
+    <a href='/download?filename={{filename}}-x86_64.AppImage&uuid={{uuid}}' class="download-link">Download {{filename}}-x86_64.AppImage</a>
+    <a href='/download?filename={{filename}}-aarch64.AppImage&uuid={{uuid}}' class="download-link">Download {{filename}}-aarch64.AppImage</a>
+    <a href='/download?filename={{filename}}-x86_64.flatpak&uuid={{uuid}}' class="download-link">Download {{filename}}-x86_64.flatpak</a>
+    <a href='/download?filename={{filename}}-aarch64.flatpak&uuid={{uuid}}' class="download-link">Download {{filename}}-aarch64.flatpak</a>
+{% elif platform == 'android' %}
+    <a href='/download?filename={{filename}}-aarch64.apk&uuid={{uuid}}' class="download-link">Download {{filename}}-aarch64.apk</a>
+    <a href='/download?filename={{filename}}-x86_64.apk&uuid={{uuid}}' class="download-link">Download {{filename}}-x86_64.apk</a>
+    <a href='/download?filename={{filename}}-armv7.apk&uuid={{uuid}}' class="download-link">Download {{filename}}-armv7.apk</a>
+{% elif platform == 'macos' %}
+    <a href='/download?filename={{filename}}-x86_64.dmg&uuid={{uuid}}' class="download-link">Download {{filename}}-x86_64.dmg</a>
+    <a href='/download?filename={{filename}}-aarch64.dmg&uuid={{uuid}}' class="download-link">Download {{filename}}-aarch64.dmg</a>
+{% else %}
+    <p>Error: No file generated</p>
+{% endif %}
+</div>
 </div>
 
     <div id="platformNote" class="platform-note"></div>
