--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -8,7 +8,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Roboto', sans-serif;
+           font-family: 
+             'Roboto', 
+             "Microsoft YaHei", 
+             "PingFang SC", 
+             "Hiragino Sans GB", 
+             "Noto Sans CJK SC", 
+              sans-serif;
+           -webkit-font-smoothing: antialiased;
+           -moz-osx-font-smoothing: grayscale;
+            text-rendering: optimizeLegibility;
             background-color: #000;
             color: #e0e0e0;
             margin: 0;
