--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -391,17 +391,19 @@
                     {{ form.overrideManual }}<br><br>
             </div>
         </div>
-        <div class="platform">
-          <div class="section">
-            <!-- 移动到右边的按钮 -->
-            <button type="submit" 
-                    style="display: block; margin: 0 auto; padding: 12px 30px; font-size: 16px; 
-                           background-color: #0d6efd; color: white; border: none; 
-                           border-radius: 6px; cursor: pointer; transition: background-color 0.2s;">
-              <i class="fas fa-rocket"></i> 生成自定义客户端
-            </button>
-          </div>
-        </div>
+           <div class="platform">
+                <div class="section">
+                    <button type="submit"><i class="fas fa-rocket"></i> Generate Custom Client</button>
+                </div>
+            </div>
+            <div style="text-align: center; margin: 30px 0;">
+                <a href="https://github.com/bryangerlach/rdgen" 
+                target="_blank" 
+                class="sponsor-button">
+                    <i class="fab fa-github"></i>
+                    Source Code on Github
+                </a>
+            </div>
 
         <div style="text-align: center; margin: 30px 0;">
             <a href="https://github.com/sponsors/bryangerlach?o=esb"
