--- a/rdgenerator/templates/generator.html
+++ b/rdgenerator/templates/generator.html
@@ -233,12 +233,11 @@
       </style>
 </head>
 <body>
-    <h1><i class="fas fa-cogs"></i> RustDesk Custom Client Builder</h1>
+    <h1><i class="fas fa-cogs"></i> 客户端构建器 </h1>
     <form id="myForm" action="/generator" method="post" enctype="multipart/form-data">
         <div class="save-load-section-container">
             <div class="section">
-                <h2 id="saveLoadTitle">Save/Load Configuration <i class="fas fa-chevron-down"></i></h2>  
-                <div class="save-load-section">  
+                <<h  i==saveeLoadTitle> 保存/加载配置 <i class==eLoadTitle> 保存 <i class==eLoadTitle> bao'cu <i class==eLoss="save-load-section">  
                     <button type="button" onclick="saveFormData()">Save Configuration</button>
                     <input type="file" id="fileInput" style="display:none;" accept=".json">
                     <button type="button" onclick="loadFormData()">Load Configuration</button>
